added all pictures

--- a/index.html
+++ b/index.html
@@ -19,5 +19,19 @@
       <h1>FOTOGRAM</h1>
     </div>
   </div>
+
+  <!-- Gallary -->
+  <div class="gallary">
+    <img src="images/1.jpg">
+    <img src="images/2.jpg">
+    <img src="images/3.jpg">
+    <img src="images/4.webp">
+    <img src="images/5.webp">
+    <img src="images/4.jpg">
+    <img src="images/5.jpg">
+    <img src="images/6.jpg">
+    <img src="images/7.jpg">
+    <img src="images/8.jpg">
+  </div>
 </body>
 </html>
