--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
 
   <!-- Gallary -->
-  <div class="gallary">
+  <!-- <div class="gallary">
     <img src="images/1.jpg">
     <img src="images/2.jpg">
     <img src="images/3.jpg">
@@ -32,6 +32,6 @@
     <img src="images/6.jpg">
     <img src="images/7.jpg">
     <img src="images/8.jpg">
-  </div>
+  </div> -->
 </body>
 </html>
