--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!--  css link -->
   <link rel="stylesheet" href="css/component.css">
   <link rel="stylesheet" href="css/general.css">
+  <link rel="stylesheet" href="css/lightbox.css">
 </head>
 <body>
   <!-- Topbar -->
@@ -22,16 +23,39 @@
 
   <!-- Gallary -->
   <div class="gallary">
-    <img src="images/1.jpg">
-    <img src="images/2.jpg">
-    <img src="images/3.jpg">
-    <img src="images/4.webp">
-    <img src="images/5.webp">
-    <img src="images/4.jpg">
-    <img src="images/5.jpg">
-    <img src="images/6.jpg">
-    <img src="images/7.jpg">
-    <img src="images/8.jpg">
+    <a href="images/1.jpg" data-lightbox="models" data-title="Caption1">
+      <img src="images/1.jpg">
+    </a>
+    <a href="images/2.jpg" data-lightbox="models" data-title="Caption2">
+      <img src="images/2.jpg">
+    </a>
+    <a href="images/3.jpg" data-lightbox="models" data-title="Caption3">
+      <img src="images/3.jpg">
+    </a>
+    <a href="images/4.webp" data-lightbox="models" data-title="Caption4">
+      <img src="images/4.webp">
+    </a>
+    <a href="images/5.webp" data-lightbox="models" data-title="Caption5">
+      <img src="images/5.webp">
+    </a>
+    <a href="images/4.jpg" data-lightbox="models" data-title="Caption6">
+      <img src="images/4.jpg">
+    </a>
+    <a href="images/5.jpg" data-lightbox="models" data-title="Caption7">
+      <img src="images/5.jpg">
+    </a>
+    <a href="images/6.jpg" data-lightbox="models" data-title="Caption8">
+      <img src="images/6.jpg">
+    </a>
+    <a href="images/7.jpg" data-lightbox="models" data-title="Caption9">
+      <img src="images/7.jpg">
+    </a>
+    <a href="images/8.jpg" data-lightbox="models" data-title="Caption10">
+      <img src="images/8.jpg">
+    </a>
   </div>
+
+  <!-- JavaScript link -->
+   <script src="lightbox-plus-jquery.js"></script>
 </body>
 </html>
